# ShadowBook

./: .gitignore  WEEKEND_1.md  cargo.toml
crates/book/: Cargo.toml
crates/book/src/: error.rs  lib.rs  orderbook.rs
crates/features/: Cargo.toml
crates/features/src/: engine.rs  lib.rs  trades.rs
crates/feed/: Cargo.toml
crates/feed/src/: error.rs  lib.rs  messages.rs  rest.rs  ws.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: event_writer.rs  lib.rs  snapshot_writer.rs
models/: lgbm_v1.txt
python/: check_features.py  python_check.py  train.py
