[package]
name = "book"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
feed = { path = "../feed" }
ordered-float = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
