[package]
name = "features"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
book = { path = "../book" }
feed = { path = "../feed" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ordered-float = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }