[package]
name = "recorder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
feed = { path = "../feed" }
book = { path = "../book" }
features = { path = "../features" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
ordered-float = { workspace = true }

[[bin]]
name = "recorder"
path = "src/bin/recorder.rs"

[[bin]]
name = "replay"
path = "src/bin/replay.rs"